--- a/front-end/views/index.ejs
+++ b/front-end/views/index.ejs
@@ -11,13 +11,13 @@
         </li>
         
         <li class="list-group-item menu pt-3 pb-3 ps-5">
-          <a class="tLateral d-flex align-items-center" href="/cad-texto">
+          <a class="tLateral d-flex align-items-center" href="/cadastrar-texto">
             <i class="material-icons pe-2">subject</i>Mensagens de Texto</a>
         </li>
         
         <li class="list-group-item menu pt-3 pb-3 ps-5">
-          <a class="tLateral d-flex align-items-center" href="/cad-midia">
-            <i class="material-icons pe-2">perm_media</i> Mensagens de Midias</a>
+          <a class="tLateral d-flex align-items-center" href="/cadastrar-media">
+            <i class="material-icons pe-2">perm_media</i> Mensagens de medias</a>
         </li>
 
         <li class="list-group-item menu pt-3 pb-3">
@@ -49,10 +49,10 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <p class="texto text-center">Tudo é muito simples e facil, ah!, mas caso surgir alguma duvida, é só
-                    acessar a
-                    area de informações
-                    que fica na barra lateral a esquerda!
+                  <p class="texto text-center">Tudo é muito simples e facil, para começar, cadastre as perguntas
+                    e respostas selecionando a opção de cadastro no menu lateral. Após 
+                    realizar o cadastro, faça o treinamento do robô acessando a página de "Treinamento", feito isso seu 
+                    robô estará pronto para conversar. 😊
                   </p>
                 </div>
               </div>
@@ -73,78 +73,4 @@
     </div>
   </div>
 
-  <!-- Socket para envio e recebimento das mensagens do robô -->
-  <script>
-    host = '<%= process.env.APP_HOST%>';
-    nginx = host + ':<%= process.env.NGINX_PORT%>';
-    chatbot = host + ':<%= process.env.BACKEND_PORT%>';
-
-    getMidia = function (url) {
-      return nginx + url;
-    }
-
-    window.onload = function () {
-      const socket = io(chatbot);
-      socket.on('connect', () => {
-        socket.send('Usuário conectado ao socket!')
-      });
-
-      document.querySelector("form").addEventListener("submit", function (event) {
-        event.preventDefault();
-        if (event.target[1].value) {
-          socket.emit('sendMessage', event.target[1].value);
-          const user = document.createElement('user')
-          const chatUser = document.querySelector('.chatBot');
-          user.innerHTML =
-           `<div class=" d-flex flex-row-reverse bd-highlight">
-              <div class="botInput p-2 mb-3 text-end bd-highlight">
-                <span id="user" class="text-break">${event.target[1].value}</span>
-              </div>
-            </div>`
-          chatUser.append(user);
-          event.target[1].value = "";
-        }
-      })
-
-      socket.on('getMessage', (msg) => {
-        const bot = document.createElement('bot');
-        const chatBot = document.querySelector('.chatBot');
-        let tipoMensagem, mensagem;
-        mensagem = msg.slice(1, -1);
-        console.log(getMidia(mensagem));
-        if ((msg.charAt(0) === '<') && (msg.charAt(msg.length - 1) === '>')) {
-          tipoMensagem = `<img onclick="clique('${getMidia(`/img/` + mensagem)}', 'img')" id="miniatura" src="${getMidia(`/img/` + mensagem)}"  alt="">`;
-
-        } else if ((msg.charAt(0) === '%') && (msg.charAt(msg.length - 1) === '%')) {
-          tipoMensagem = 
-           `<video width="320" height="240" controls>
-              <source src="${getMidia(`/video/` + mensagem)}" type="video/mp4">
-              <source src="${getMidia(`/video/` + mensagem)}" type="video/ogg">
-            </video>`;
-
-        } else if ((msg.charAt(0) === '$') && (msg.charAt(msg.length - 1) === '$')) {
-          tipoMensagem = `<span>Para saber mais </span><a class="link" href="${getMidia(`/pdf/` + mensagem)}" target="_blank">Clique aqui</a>`;
-
-        } else if ((msg.charAt(0) === '?') && (msg.charAt(msg.length - 1) === '?')) {
-          tipoMensagem = `<span>Para saber mais </span><a class="link" href="${getMidia(`/outros/` + mensagem)}" target="_blank">Clique aqui</a>`;
-
-        } else if ((msg.charAt(0) === '!') && (msg.charAt(msg.length - 1) === '!')) {
-          tipoMensagem = `<span>Acesse o link: </span><a class="link" href="${mensagem}" target="_blank">${mensagem}</a>`;
-
-        } else {
-          tipoMensagem = msg;
-        }
-        bot.innerHTML =
-          `<div class=" align-self-end">
-             <div class="d-flex flex-row bd-highlight justify-content-start">
-               <img class="imgRobo" src="./img/robo2.png"  alt="">
-               <div class="botOutinput p-2  mb-3 bd-highlight">
-                <span id="bot" class="text-break">${tipoMensagem}</span>
-               </div>
-             </div>
-          </div>`;
-        chatBot.append(bot);
-      })
-    }
-  </script>
-  <%- include('rodape'); %>
+<%- include('rodape'); %>
