--- a/front-end/views/mediasCadastradas.ejs
+++ b/front-end/views/mediasCadastradas.ejs
@@ -39,36 +39,24 @@
   <div class="col-md-9">
     <div class="container">
 	  <div class="row">
-	    <div class="row">
-		  <h2 class="titulo2 mt-3 mb-3">Informações cadastradas</h2>
-		</div>
-		<div class="row">
-			<p class="text-end">Caso desejar excluir as medias cadastradas, <a href="/medias-cadastradas">clique aqui</a></p>
-		  </div>
+	    <h2 class="titulo2 mt-3 mb-3">Medias cadastradas</h2>
 	  </div>
 	  <div class="borda-tabela">
 		<div class="row mb-3">
-		  <div class="col-sm-5">
-			<h5>Pergunta</h5>
-		  </div>
-		  <div class="col-sm-5">
-		    <h5>Resposta</h5>
+		  <div class="col-sm-10">
+		    <h5>Media</h5>
 		  </div>
 	    </div>
 		<hr/>
 		<div class="tabela2">
 		<%- include('mensagem'); %> 
 		  <% for(let item of dados){%>
-		    <div class="row mb-3" id="resposta_<%= item.id_resposta %>">
-		      <div class="col-sm-5 text-break info-cadastradas">
-			    <%= item.pergunta %>
+		    <div class="row mb-3" id="media_<%= item.id %>">
+		      <div class="col-sm-11 text-break info-cadastradas">
+			    <%= item.media %>
 			</div>
-			<div class="col-sm-5 text-break info-cadastradas">
-		      <%= item.resposta %>
-			</div>
-			<div class="col-sm-2 mt-2 d-flex justify-content-between">
-		      <i class=" text-danger material-icons" onclick="deletarInformacao(<%= item.id_resposta%>)">delete</i>
-			  <i class="text-success material-icons" onclick="editarInformacao(<%= item.id_pergunta %>, <%= item.id_resposta %>,'<%= item.pergunta %>', '<%= item.resposta %>')">edit</i>
+			<div class="col-sm-1 mt-2 d-flex justify-content-between">
+		      <i class=" text-danger material-icons" onclick="deletarMedia(<%= item.id%>)">delete</i>
 			</div>
 	      </div>
 		  <% } %>
