--- a/front-end/views/cadMedia.ejs
+++ b/front-end/views/cadMedia.ejs
@@ -20,7 +20,7 @@
 
         <li class="list-group-item ativo menu pt-3 pb-3 ps-5">
           <a class="tLateral d-flex align-items-center activoTexto" href="/cadastrar-media">
-            <i class="material-icons pe-2">perm_media</i> Mensagens de medias
+            <i class="material-icons pe-2">perm_media</i> Mensagens de mídias
           </a>
         </li>
     
@@ -41,14 +41,14 @@
     <div class="col-md-9">
       <div class="container">
         <div class="row">
-          <h2 class="mt-4 titulo2">Cadastro de perguntas e respostas com medias</h2>
+          <h2 class="mt-4 titulo2">Cadastro de perguntas e respostas com mídias</h2>
         </div>
 
         <div class="row mb-3 d-flex justify-content-center">
           <div class="col-md-8 mt-5">
             <form method="POST" enctype="multipart/form-data" action="/cadastrar-media">
               <div id="arquivoLocal" class="mb-3 mt-3">
-                <label for="exampleFormControlFile1" class="form-label d-block">Selecone a media</label>
+                <label for="exampleFormControlFile1" class="form-label d-block">Selecone a mídia</label>
                 <input type="file" name="file" class="form-control-file input" id="inputLocal" required>
               </div>
 
