--- a/front-end/views/conversasCadastradas.ejs
+++ b/front-end/views/conversasCadastradas.ejs
@@ -20,7 +20,7 @@
 
 	  <li class="list-group-item menu pt-3 pb-3 ps-5">
 	    <a class="tLateral d-flex align-items-center" href="/cadastrar-media">
-		  <i class="material-icons pe-2">perm_media</i> Mensagens de medias
+		  <i class="material-icons pe-2">perm_media</i> Mensagens de mídias
 		</a>
 	  </li>
 	  
@@ -43,7 +43,7 @@
 		  <h2 class="titulo2 mt-3 mb-3">Informações cadastradas</h2>
 		</div>
 		<div class="row">
-			<p class="text-end">Caso desejar excluir as medias cadastradas, <a href="/medias-cadastradas">clique aqui</a></p>
+			<p class="text-end">Caso desejar excluir as mídias cadastradas, <a href="/medias-cadastradas">clique aqui</a></p>
 		  </div>
 	  </div>
 	  <div class="borda-tabela">
