--- a/front-end/views/treinamento.ejs
+++ b/front-end/views/treinamento.ejs
@@ -20,7 +20,7 @@
 
         <li class="list-group-item menu pt-3 pb-3 ps-5">
           <a class="tLateral d-flex align-items-center" href="/cadastrar-media">
-            <i class="material-icons pe-2">perm_media</i> Mensagens de medias
+            <i class="material-icons pe-2">perm_media</i> Mensagens de mídias
           </a>
         </li>
     
