--- a/front-end/views/mediasCadastradas.ejs
+++ b/front-end/views/mediasCadastradas.ejs
@@ -20,7 +20,7 @@
 
 	  <li class="list-group-item menu pt-3 pb-3 ps-5">
 	    <a class="tLateral d-flex align-items-center" href="/cadastrar-media">
-		  <i class="material-icons pe-2">perm_media</i> Mensagens de medias
+		  <i class="material-icons pe-2">perm_media</i> Mensagens de mídias
 		</a>
 	  </li>
 	  
@@ -39,12 +39,12 @@
   <div class="col-md-9">
     <div class="container">
 	  <div class="row">
-	    <h2 class="titulo2 mt-3 mb-3">Medias cadastradas</h2>
+	    <h2 class="titulo2 mt-3 mb-3">Mídias cadastradas</h2>
 	  </div>
 	  <div class="borda-tabela">
 		<div class="row mb-3">
 		  <div class="col-sm-10">
-		    <h5>Media</h5>
+		    <h5>Mídia</h5>
 		  </div>
 	    </div>
 		<hr/>
